--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.11"
 appdirs = "^1.4.4"
 diskcache = "^5.6.3"
+pandas = {extras = ["pyarrow"], version = "^2.3.1"}
 
 
 [build-system]
