--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ python = "^3.11"
 appdirs = "^1.4.4"
 diskcache = "^5.6.3"
 pandas = {extras = ["pyarrow"], version = "^2.3.1"}
-
+openpyxl = "^3.1.5"
 
 [build-system]
 requires = ["poetry-core"]
